# generate-git-conv-message

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: test.yml
tests/: test_main.py
